--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,102 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "resgest",
+  "name": "Resgest App",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
+     "src": "icons/icon-48x48.png",
+     "sizes": "48x48",
+     "type": "image/png",
+     "purpose": "maskable any"
+     },
+     {
+     "src": "icons/icon-72x72.png",
+     "sizes": "72x72",
+     "type": "image/png",
+     "purpose": "maskable any"
+     },
+     {
+     "src": "icons/icon-96x96.png",
+     "sizes": "96x96",
+     "type": "image/png",
+     "purpose": "maskable any"
+     },
+     {
+     "src": "icons/icon-128x128.png",
+     "sizes": "128x128",
+     "type": "image/png",
+     "purpose": "maskable any"
+     },
+     {
+     "src": "icons/icon-144x144.png",
+     "sizes": "144x144",
+     "type": "image/png",
+     "purpose": "maskable any"
+     },
+     {
+     "src": "icons/icon-152x152.png",
+     "sizes": "152x152",
+     "type": "image/png",
+     "purpose": "maskable any"
+     },
+     {
+     "src": "icons/icon-192x192.png",
+     "sizes": "192x192",
+     "type": "image/png",
+     "purpose": "maskable any"
+     },
+     {
+     "src": "icons/icon-384x384.png",
+     "sizes": "384x384",
+     "type": "image/png",
+     "purpose": "maskable any"
+     },
+     {
+     "src": "icons/icon-512x512.png",
+     "sizes": "512x512",
+     "type": "image/png",
+     "purpose": "maskable any"
+     }
+ ],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "description": "Bienvenue dans l'avenir de la gestion de restaurant avec ResGest, une application de menu digital tout-en-un conçue pour améliorer l'efficacité opérationnelle, augmenter la satisfaction client et optimiser votre présence en ligne.",
+  "dir": "ltr",
+  "scope": "/",
+  "lang": "fr",
+  "orientation": "portrait",
+  "display_override": [
+    "standalone",
+    "fullscreen"
+  ],
+  "prefer_related_applications": false,
+  "categories": [
+    "App","restaurant","Hotel"
+  ],
+  "screenshots": [{
+    "src": "screens/screen1.jpg",
+    "sizes": "795x1179",
+    "platform": "android",
+    "label": "Home Page"
+  },
+  {
+    "src": "screens/screen2.jpg",
+    "sizes": "795x1179",
+    "platform": "android",
+    "label": "Menu Details"
+  },
+  {
+    "src": "screens/screen3.jpg",
+    "sizes": "795x1179",
+    "platform": "android",
+    "label": "Checkout"
+  },
+  {
+    "src": "screens/screen4.jpg",
+    "sizes": "795x1179",
+    "platform": "android",
+    "label": "onboarding"
+  }
+  ]
 }
