--- a/public/manifest.json
+++ b/public/manifest.json
@@ -59,7 +59,7 @@
  ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#ffffff",
   "background_color": "#ffffff",
   "description": "Bienvenue dans l'avenir de la gestion de restaurant avec ResGest, une application de menu digital tout-en-un conçue pour améliorer l'efficacité opérationnelle, augmenter la satisfaction client et optimiser votre présence en ligne.",
   "dir": "ltr",
