--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_BASE_ENDPOINT=http://127.0.0.1:3007/api
+# REACT_APP_BASE_ENDPOINT=http://192.168.10.2:3007/api
 REACT_APP_MAIN_URL=http://localhost:3000
