--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # REACT_APP_BASE_ENDPOINT=http://127.0.0.1:3007/api
-REACT_APP_BASE_ENDPOINT= https://3007-cs-dda81630-10b3-4841-aa02-85bde3ea0a66.cs-europe-west1-onse.cloudshell.dev/api
+REACT_APP_BASE_ENDPOINT= https://resgest.el.r.appspot.com/api
 # REACT_APP_BASE_ENDPOINT=http://192.168.10.2:3007/api
 REACT_APP_MAIN_URL=http://localhost:3000
